[package]
name = "kore-node"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
borsh = "1.3.1"
db-key = { version = "0.0.5", optional = true} # Depends from leveldb update
futures = "0.3"
hex-literal = "0.4.1"
kore-base = { path = "./../kore-base/core", version = "0.5.2", features = ["all"]}
leveldb = { version = "0.8", optional = true}
log = "0.4"
pkcs8 = { version = "0.10.2", features = ["encryption"]}
rand = "0.8"
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = { version = "3.2.0", optional = true }
thiserror = "1.0"
tokio = { version = "1.37", features = ["signal"] }
tokio-util = "0.7"
prometheus-client = "0.22.2"
config = {version = "0.14.0", features = ["json", "toml", "yaml"]}

[dev-dependencies]
tempfile = "3.2"
tokio = { version = "1.37", features = ["rt", "macros"] }


[features]
default = ["sqlite"]
leveldb = ["dep:leveldb", "db-key", "tempfile"]
sqlite = ["rusqlite", "tempfile"]
