[package]
name = "kore-node"
version = "0.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
borsh = "1.3.1"
db-key = { version = "0.0.5", optional = true} # Depends from leveldb update
futures = "0.3"
hex-literal = "0.4.1"
kore-base = { git = "https://github.com/kore-ledger/kore-base.git", version = "0.5.7", features = ["all"]}
leveldb = { version = "0.8", optional = true}
log = "0.4"
pkcs8 = { version = "0.10.2", features = ["encryption"]}
rand = "0.8"
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = { version = "3.2.0", optional = true }
thiserror = "1.0"
tokio = { version = "1.37", features = ["signal"] }
tokio-util = "0.7"
prometheus-client = "0.22.2"
config = {version = "0.14.0", features = ["json", "toml", "yaml"]}
axum = { version = "0.7.5", optional = true }
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]
serial_test = "3.0"
tempfile = "3.2"
tokio = { version = "1.37", features = ["rt", "macros"] }


[features]
default = ["sqlite", "prometheus"]
prometheus = ["axum"]
leveldb = ["dep:leveldb", "db-key", "tempfile"]
sqlite = ["rusqlite", "tempfile"]
